Added support for querystrings

--- a/TestSite/App_Plugins/Meganav/Views/settings.html
+++ b/TestSite/App_Plugins/Meganav/Views/settings.html
@@ -20,6 +20,13 @@
                                class="umb-property-editor umb-textstring"
                                ng-model="model.target.url"
                                ng-disabled="model.target.id || model.target.udi" />
+
+                        <input type="text"
+                               localize="placeholder"
+                               placeholder="@general_anchor"
+                               class="umb-property-editor umb-textstring"
+                               ng-model="model.target.anchor"
+                               ng-disabled="model.target.id || model.target.udi" />
                     </umb-control-group>
 
                     <umb-control-group label="@general_name"
