Fixed null exception

--- a/TestSite/Views/Partials/Navigation/TopNavigation.cshtml
+++ b/TestSite/Views/Partials/Navigation/TopNavigation.cshtml
@@ -3,10 +3,9 @@
 @using Umbraco.Web;
 @{
     var site = Model.Root();
-    var megaNavV8Items = site.DescendantsOfType("mainNavigation").FirstOrDefault().Value<IEnumerable<MeganavV8Item>>("megaNav");
+    var megaNavV8Items = site.DescendantsOfType("mainNavigation").FirstOrDefault().Value<IEnumerable<MeganavV8Item>>("megaNavV8");
 }
 <!-- comment out the following line if you want to remove the root node name from the top navigation -->
-<a class="nav-link @Html.Raw(Model.Id == site.Id ? "navi-link--active" : "")" href="@site.Url">@site.Name</a>
 @foreach (var item in megaNavV8Items)
 {
     <a class="nav-link" href="@item.Url" @if (!string.IsNullOrEmpty(item.Target)){<text>target="@item.Target"</text>}>@item.Title</a>}
