--- a/TestSite/Views/Partials/Navigation/TopNavigation.cshtml
+++ b/TestSite/Views/Partials/Navigation/TopNavigation.cshtml
@@ -1,5 +1,5 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
-@using Our.Umbraco.MeganavV8.Models
+@using Our.Umbraco.MeganavV8.Core.Models
 @using Umbraco.Web;
 @{
     var site = Model.Root();
