--- a/src/Our.Umbraco.MeganavV8.Web/Web/UI/App_Plugins/MeganavV8/Views/editor.html
+++ b/src/Our.Umbraco.MeganavV8.Web/Web/UI/App_Plugins/MeganavV8/Views/editor.html
@@ -1,5 +1,8 @@
 ﻿<div ng-controller="Our.Umbraco.MeganavV8.MeganavController" class="meganav-editor">
-
+    <div class="meganav-editor-buttons">
+        <a class="btn btn-primary" ng-click="expandAll()">Expand all</a>
+        <a class="btn btn-secondary" ng-click="collapseAll()">Collapse all</a>
+    </div>
     <ng-form name="meganavEditorForm">
 
         <!-- meganav sortable tree -->
@@ -54,7 +57,7 @@
                         <localize key="general_remove">Remove</localize>
                         <span class="sr-only">{{name}}</span>
                     </a>
-                    <div class="button">
+                    <div class="meganav-editor-button">
                         <a class="btn btn-success btn-xs" ng-if="item.children && item.children.length > 0" data-nodrag ng-click="editItem(item)">
                             <i ng-class="{
                             'fa fa-plus': item.collapsed,
@@ -68,7 +71,7 @@
 
         </div>
 
-        <ol ui-tree-nodes ng-model="item.children" ng-show = "!item.collapsed">
+        <ol ui-tree-nodes ng-model="item.children" ng-show="!item.collapsed">
 
             <li ng-repeat="item in item.children" ui-tree-node ng-include="'nav_item_template.html'"></li>
 
