Started on language variant support

--- a/TestSite/App_Plugins/MeganavV8/Views/settings.html
+++ b/TestSite/App_Plugins/MeganavV8/Views/settings.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="Umbraco.Editors.LinkPickerController as vm"  class="umb-linkpicker">
+﻿<div ng-controller="Our.Umbraco.MeganavV8.LinkPickerController as vm"  class="umb-linkpicker">
 
     <umb-editor-view>
 
