--- a/TestSite/App_Plugins/MeganavV8/Views/editor.html
+++ b/TestSite/App_Plugins/MeganavV8/Views/editor.html
@@ -36,7 +36,7 @@
                     <div class="umb-node-preview__content">
 
                         <div class="umb-node-preview__name" ng-attr-title="{{item.title || item.name}}">{{ item.title || item.name }}</div>
-                        <div class="umb-node-preview__description" ng-if="item.url">{{ item.url }}</div>
+                        <div class="umb-node-preview__description" ng-if="item.description">{{ item.description }}</div>
                     </div>
                 </div>
                 <div class="umb-node-preview__actions">
