--- a/src/AaronSadler.MegaNavV8.Web/Web/UI/App_Plugins/MeganavV8/Views/editor.html
+++ b/src/AaronSadler.MegaNavV8.Web/Web/UI/App_Plugins/MeganavV8/Views/editor.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="Our.Umbraco.MeganavV8.MeganavController" class="meganav-editor">
+﻿<div ng-controller="AaronSadler.MeganavV8.MeganavController" class="meganav-editor">
     <div class="meganav-editor-buttons" ng-if="showButtons()">
         <a class="btn btn-primary" ng-click="expandAll()">Expand all</a>
         <a class="btn btn-secondary" ng-click="collapseAll()">Collapse all</a>
